--- a/index.html
+++ b/index.html
@@ -153,35 +153,58 @@
 		<div class="container">
 			<!-- Common Title Start -->
 			<div class="h-page-title">
-				<h1>about</h1>
-				<span class="sub-title">a little about us</span>
+				<div class="top-info">
+							<h2>SOBRE <span class="highlight-text">NOSOTROS</span></h2>
+						</div>
+				<span class="sub-title"><div id="google_translate_element" class="google"></div></span>
 				<div class="mustache">
 					<span><img class="img-responsive" src="images/home-page/mustache.png" alt=""></span>
 				</div>
 			</div>
-			<!-- Common Title End -->
+							<br>
+							<div align="center">
+								<ul class="about-thumb">
+							<li><br></li>
+							<li><img src="images/home-page/about2.jpg" class="img-responsive" alt=""/></li>
+							<li><br></li>
+						</ul>
+									</div>
+			<!--el br wee :V-->
 			<div class="about-main">
 				<div class="row">
+				
 					<div class="class-xs-12 col-sm-6 col-md-6">
-						<p>Maecenas sodales ligula non velit pretium, ac aliquet nisi auctor. Morbi eu ipsum sit amet nunc sodales volutpat. Vivamus dignissim interdum ex quis tincidunt. Sed vitae felis tellus. Mauris tristique nisl ut quam faucibus, ac volutpat urna dictum. Vestibulum tincidunt neque molestie ante mollis scelerisque. Nullam condimentum sodales tellus. Sed convallis magna nec tincidunt malesuada.</p>
-						<p>Quisque auctor sapien sed nisi bibendum, in porta risus scelerisque. Phasellus sagittis, velit quis euismod elementum, eros nisl bibendum turpis, et volutpat velit orci non lorem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi nec elit ex.</p>
+					<h1>NUESTRA HISTORIA</h1><br>
+						<p>Con más de 30 años de experiencia en el sector de la belleza, Lia Saavedra una exitosa emprendedora mexicana y apasinada por la belleza comenzó su carrera en México, logrando alcanzar 3 exitosas sucursales en México, decidió cambiar de ubicación con el fin de mejorar su carrera profesional a Montreale en donde con la misma emoción y pasión está dispuesta a mejorar la imágen de las personas de Montreal.</p>
+						<p>Su personal está en constante formación continua, lo que revierte en el aprendizaje de nuevas técnicas y nuevos métodos para el cuidado del cuerpo y así ofrecer a sus clientes siempre las ultimas novedades para poder lograr esa belleza y bienestar.
+						Descubra nuestra amplia oferta de productos y servicios para el cuerpo.  Permítanos cuidar de su cuerpo. </p>
 					</div>
 					<div class="class-xs-12 col-sm-6 col-md-6">
-						<p>In at felis pretium erat pellentesque pulvinar. Nam lobortis neque eu laoreet rutrum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et condimentum urna, vitae tempor ante. Etiam id lorem dui. Maecenas a lacinia lacus. Integer congue eget dolor sit amet scelerisque.</p>
-						<p>Duis leo neque, viverra vel erat tempor, laoreet dictum elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam id efficitur odio. Vivamus eleifend odio elit, sit amet lobortis nunc ornare eu. Nulla viverra nisl nec massa porttitor commodo. Suspendisse venenatis risus id ante consequat, at feugiat ex rutrum. Nam commodo rutrum congue.</p>
+					<h1>¿QUIÉNES SOMOS?</h1><br>
+						<p>Somos una empresa dedicada a brindar servicios de salud, bienestar y belleza integral para mujeres y hombres de todas las edades. Además, ponemos al alcance de nuestros clientes productos de calidad que les permitan mantener una imagen bella y sana.</p>
+					<h1>NUESTRA MISIÓN</h1><br>
+						<p>Brindar servicios de salud, bienestar y belleza integral de calidad con atención personalizada, que superen las expectativas de nuestros clientes. Aspiramos ser una empresa con un crecimiento sostenido, innovadora y dedicada a servir y ayudar a nuestros clientes a verse y sentirse bien, estando conformada por un equipo de trabajo comprometido y sólido.</p>
+						<h1>NUESTRA VISIÓN</h1><br>
+						<p>Ser reconocidos como una marca de salud y belleza líder en el mercado local, identificados por nuestro profesionalismo, calidad y excelente servicio al cliente, lo que nos permita ser la mejor opción en el mercado.</p>
 					</div>
-				</div>
-			</div>
-			<div class="about-bottom">
+					<div class="about-bottom">
 				<span>“</span>
-				<p>Maecenas sodales ligula non velit pretium, ac aliquet nisi auctor. Morbi eu ipsum sit amet nunc sodales volutpat. Vivamus dignissim interdum ex quis tincidunt. Sed vitae felis tellus. Mauris tristique nisl ut quam faucibus, ac volutpat urna dictum. Vestibulum tincidunt neque molestie ante mollis scelerisque. Nullam condimentum sodales tellus. Sed convallis magna nec tincidunt malesuada. Quisque auctor sapien sed nisi bibendum, in porta risus scelerisque.</p>
-				<h5>John Smith</h5>
-				<span class="speciality">designer</span>
+				<h1><i>La belleza está en todos...</i></h1>
 			</div>
-			<button class="main-btn" type="submit">join us</button>
+			<br>
+		
+				</div>
+				<div class="video">
+									<iframe src="https://player.vimeo.com/video/487640755?title=0&amp;byline=0&amp;portrait=0" width="500" height="375"></iframe>
+								</div>
+			</div>
+			
 		</div>
+		
 	</section>
 	<!-- ABOUT -->
+	
+	
 
 	<!-- STATS -->
 	<section id="stats">
